--- a/AR/index.html
+++ b/AR/index.html
@@ -50,8 +50,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card glowBack" id="AR-Card-03">
-                        <img src="../images/ar-images/maroon5Gradient2.jpg" id="imagePlacement01" class="card-img-top image01" alt="...">
-                        <a href="augmentedReality02.html" class="stretched-link"></a>
+                        <img src="../images/ar-images/BroncosGradient2.jpg" id="imagePlacement01" class="card-img-top image01" alt="...">
+                        <a href="broncos.html" class="stretched-link"></a>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class = "card-text">This is a description of category 1</p>
@@ -61,15 +61,6 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="card glowBack" id="AR-Card-04">
-                        <img src="../images/ar-images/maroon5Gradient2.jpg" id="imagePlacement01" class="card-img-top image01" alt="...">
-                        <a href="augmentedReality02.html" class="stretched-link"></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class = "card-text">This is a description of category 1</p>
-                            
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
