--- a/AR/broncos.html
+++ b/AR/broncos.html
@@ -213,6 +213,7 @@
         <script src="../js/scalingTopImage.js"></script>
         <script src="../js/stickyFade.js"></script>
         <script src="../js/animatedSprite.js"></script>
+        <script src="../js/gradientBackground.js"></script>
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
