--- a/AR/maroon-5.html
+++ b/AR/maroon-5.html
@@ -17,6 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:600|Roboto:100,300,400,700&display=swap" rel="stylesheet">
 
         <title>John Moody - Portfolio</title>
+        <link rel="icon" href="../images/glassBustColorG1_favicon32.png">
 
     </head>
 
