--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                                 </linearGradient>
                                 <clipPath id="clipping" x="50%" y="50%">
                                     <text x="50%" y="50%">
-                                        <tspan x="50%" dy="-1rem">Hi, I'm</tspan>
-                                        <tspan x="50%" dy="1.5rem">John.</tspan>
+                                        <tspan x="50%" y="25%" dy="-1rem">Hi, I'm</tspan>
+                                        <tspan x="50%" y="35%" dy="1.5rem">John.</tspan>
                                         <tspan class="subText" x="50%" dy="1rem">I'm a designer, an artist,</tspan>
                                         <tspan class="subText" x="48%" dy="0.33rem">and a problem solver.</tspan>  
                                     </text>
