--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         <tspan class="subText" x="50%" dy="1rem">I'm a designer, an artist,</tspan>
                                         <tspan class="subText" x="48%" dy="0.33rem">and a problem solver.</tspan>  
                                     </text> -->
-                                    <text x="50%" y="2.29rem">Hi, I'm</text>
+                                    <text x="50%" y="37px">Hi, I'm</text>
                                     <text x="50%" y="3.79rem">John.</text>
                                     <text class="subText" x="50%" y="4.79rem">I'm a designer, an artist,</text>
                                     <text class="subText" x="50%" y="5.12rem">and a problem solver.</text>
