--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                                     <stop id="stop2" offset="100%" stop-color="rgb(28,255,151)"/>
                                 </linearGradient>
                                 <clipPath id="clipping" x="50%" y="50%">
-                                    <!-- <text x="50%" y="50%">
-                                        <tspan x="50%" y="25%" dy="-1rem">Hi, I'm</tspan>
-                                        <tspan x="50%" y="35%" dy="1.5rem">John.</tspan>
-                                        <tspan class="subText" x="50%" dy="1rem">I'm a designer, an artist,</tspan>
-                                        <tspan class="subText" x="48%" dy="0.33rem">and a problem solver.</tspan>  
-                                    </text> -->
-                                    <text x="50%" y="37px">Hi, I'm</text>
+                                    <text x="50%" y="50%">
+                                        <tspan x="50%" dy="-20px">Hi, I'm</tspan>
+                                        <tspan x="50%" dy="30px">John.</tspan>
+                                        <tspan class="subText" x="50%" dy="20px">I'm a designer, an artist,</tspan>
+                                        <tspan class="subText" x="48%" dy="7px">and a problem solver.</tspan>  
+                                    </text>
+                                    <!-- <text x="50%" y="37px">Hi, I'm</text>
                                     <text x="50%" y="3.79rem">John.</text>
                                     <text class="subText" x="50%" y="4.79rem">I'm a designer, an artist,</text>
-                                    <text class="subText" x="50%" y="5.12rem">and a problem solver.</text>
+                                    <text class="subText" x="50%" y="5.12rem">and a problem solver.</text> -->
                                 </clipPath>
                             </defs>
                             <rect x="0" y="0" width="100%" height="100%" fill="url(#Gradient1)"/>
