--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                                 </linearGradient>
                                 <clipPath id="clipping" x="50%" y="50%">
                                     <text x="50%" y="50%">
-                                        <tspan x="50%" dy="-20px">Hi, I'm</tspan>
-                                        <tspan x="50%" dy="30px">John.</tspan>
-                                        <tspan class="subText" x="50%" dy="20px">I'm a designer, an artist,</tspan>
-                                        <tspan class="subText" x="48%" dy="7px">and a problem solver.</tspan>  
+                                        <tspan x="50%" y="26px">Hi, I'm</tspan>
+                                        <tspan x="50%" y="56px">John.</tspan>
+                                        <tspan class="subText" x="50%" y="72px">I'm a designer, an artist,</tspan>
+                                        <tspan class="subText" x="48%" y="79px">and a problem solver.</tspan>  
                                     </text>
                                     <!-- <text x="50%" y="37px">Hi, I'm</text>
                                     <text x="50%" y="3.79rem">John.</text>
