--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="css/ar.css">
         <link rel="stylesheet" href="css/index.css">
 
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:600|Roboto:100,300,400,700&display=swap" rel="stylesheet">
+
         <title>John Moody - Portfolio</title>
         <link rel="icon" href="images/glassBustColorG1_favicon32.png">
     </head>
