--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta property="og:title" content="Portfolio" />
+        <meta property="og:image" content="images/glassBust_meta.png" />
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,6 +17,8 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Raleway:600|Roboto:100,300,400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+
 
         <title>John Moody - Portfolio</title>
         <link rel="icon" href="images/glassBustColorG1_favicon32.png">
@@ -67,10 +71,10 @@
                                 </linearGradient>
                                 <clipPath id="clipping" x="50%" y="50%">
                                     <text x="50%" y="50%">
-                                        <tspan x="50%" y="26px">Hi, I'm</tspan>
-                                        <tspan x="50%" y="56px">John.</tspan>
-                                        <tspan class="subText" x="50%" y="72px">I'm a designer, an artist,</tspan>
-                                        <tspan class="subText" x="48%" y="79px">and a problem solver.</tspan>  
+                                        <tspan x="50%" y="33px">Hi, I'm</tspan>
+                                        <tspan x="50%" y="63px">John.</tspan>
+                                        <tspan class="subText" x="50%" y="79px">I'm a designer, an artist,</tspan>
+                                        <tspan class="subText" x="48%" y="86px">and a problem solver.</tspan>  
                                     </text>
                                     <!-- <text x="50%" y="37px">Hi, I'm</text>
                                     <text x="50%" y="3.79rem">John.</text>
@@ -93,9 +97,9 @@
                 <div class="mediaTextBox row mx-0">
                     <div class="mediaBox col-12 col-lg-8">
                         <div class="d-flex h-100 justify-content-around">
-                            <!-- <div class="row justify-content-center flex-nowrap" id="">
-                                <div class="animatedSprite"></div>
-                            </div> -->
+                            <div class="row justify-content-center flex-nowrap" id="">
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 d-block d-lg-none px-0">
@@ -128,30 +132,38 @@
                 <div class="mediaTextBox row mx-0">
                     <div class="mediaBox col-md-12 col-lg-7 order-2">
                         <div class="d-flex h-100 justify-content-around">
-                            <div class="row justify-content-center flex-nowrap" id="">
-                                <div class="animatedSprite"></div>
+                            <div class="row justify-content-center flex-nowrap" id="brandsSVG">
+                                <!-- <div class="animatedSprite"></div> -->
+                                <img src="images/main/brands-01.svg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-12 d-block d-lg-none order-3 px-0">
                         <div class="animElement fadeUp textBox h-100 overflow-hidden">
                             <div class="animElement fadeRight subHead d-inline-flex rounded-pill">
-                                <h2 style="margin: 0;">MY WORK</h2>
+                                <h2 style="margin: 0;">WORK</h2>
                             </div>
-                            <div class="my-5 words fadeRight">
-                                <p>I have worked in the motion graphics and augmented reality industry for over five years. In that time, I have...</p>
+                            <div class="mt-5 mb-3 words fadeRight">
+                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands.</p>
                             </div>
-                            
+                            <a href="#" class="btn custom-btn stretched-link text-justify-center mt-3 mb-5 float-right">
+                                SEE MY WORK 
+                                <i class="material-icons-round ml-1">arrow_forward_ios</i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-5 d-none d-lg-block order-1 px-0">
                         <div class="animElement fadeUp textBox overflow-hidden">
                             <div class="animElement fadeRight subHead d-inline-flex rounded-pill">
-                                <h2 class="my-auto">MY WORK</h2>
+                                <h2 class="my-auto">WORK</h2>
                             </div>
-                            <div class="my-5 words fadeRight">
-                                <p>I have worked in the motion graphics and augmented reality industry for over five years. In that time, I have...</p>
+                            <div class="mt-5 mb-3 words fadeRight">
+                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands.</p>
                             </div>
+                            <a href="#" class="btn custom-btn stretched-link text-justify-center mt-3 mb-5 float-right">
+                                SEE MY WORK 
+                                <i class="material-icons-round ml-1">arrow_forward_ios</i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +221,7 @@
         <!-- <script src="js/scalingTopImage.js"></script> -->
         <!-- <script src="../js/stickyFade.js"></script> -->
         <script src="js/animatedSprite.js"></script>
-        <script src="js/gradientBackground-main.js"></script>
+        <script src="js/gradientBackground-main2.js"></script>
         <script src="js/svgTextAlign.js"></script>
         <script src="js/navbar.js"></script>
 
