--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="mediaTextBox row mx-0">
                     <div class="mediaBox col-md-12 col-lg-7 order-2">
                         <div class="d-flex h-100 justify-content-around">
-                            <div class="row justify-content-center flex-nowrap" id="">
+                            <div class="row justify-content-center flex-nowrap" id="brandsSVG">
                                 <!-- <div class="animatedSprite"></div> -->
                                 <!-- <svg id="brandsSVG" viewBox= "0 0 100 50" href=""></svg> -->
                                 <img src="images/main/brands-01.svg" alt="">
