--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                 <div class="mediaTextBox row mx-0">
                     <div class="mediaBox col-md-12 col-lg-7 order-2">
                         <div class="d-flex h-100 justify-content-around">
-                            <div class="row justify-content-center flex-nowrap" id="brandsSVG">
+                            <div class="row justify-content-center flex-nowrap" id="">
                                 <!-- <div class="animatedSprite"></div> -->
-                                <!-- <svg id="brandsSVG" viewBox= "0 0 100 50" href=""></svg> -->
-                                <img src="images/main/brands-01.svg" alt="">
+                                <svg id="brandsSVG" viewBox= "0 0 100 50" href="images/main/brands-01.svg"></svg>
+                                <!-- <img src="images/main/brands-01.svg" alt=""> -->
 
                             </div>
                         </div>
