--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <div class="row justify-content-center flex-nowrap" id="brandsSVG">
                                 <!-- <div class="animatedSprite"></div> -->
                                 <!-- <svg id="brandsSVG" viewBox= "0 0 100 50" href=""></svg> -->
-                                <img src="images/main/brands-01.svg" alt="">
+                                <img src="images/main/brands-01.svg#svgView(viewBox(0,0,10px,10px))" alt="">
 
                             </div>
                         </div>
