--- a/AR/augmentedReality.html
+++ b/AR/augmentedReality.html
@@ -74,7 +74,7 @@
 		<div class = "container">
 				<div class = "row">
 					<div class = "col-md-6">
-						<div class = "card mb-4 glowBack" id="image01">
+						<div class = "card mb-4" id="image01">
 							<img src="resources/saffu-201111-unsplash.jpg" id="imagePlacement01" class="card-img-top image01" alt="...">
 							<div class = "card-body">
 								<h5 class="card-title">Card title</h5>
@@ -85,17 +85,38 @@
 	
 					</div>
 					<div class = "col-md-6">
-							<div class="card mb-4 glowBack" id="image02">
-								<img src="resources/JL.SpecialCover_small.jpg" id="imagePlacement02" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h5 class="card-title">Card title</h5>
-									<p class="card-text"  style="height: 5rem;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
-								</div>
+						<div class="card mb-4 testGradient" id="">
+							<div class="glowBack"></div>
+							<img src="resources/JL.SpecialCover_small.jpg" id="imagePlacement02" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text"  style="height: 5rem;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
 							</div>
-		
 						</div>
-	
+					</div>
+					<div class = "col-md-6">
+						<div class="card mb-4 testGradient" id="">
+							<div class="glowBack"></div>
+							<img src="resources/JL.SpecialCover_small.jpg" id="imagePlacement02" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text"  style="height: 5rem;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+					<div class = "col-md-6">
+						<div class="card mb-4 testGradient" id="">
+							<div class="glowBack"></div>
+							<img src="resources/JL.SpecialCover_small.jpg" id="imagePlacement02" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text"  style="height: 5rem;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -103,6 +124,8 @@
 		<script src="../js/jquery-3.4.1.min.js"></script>
 		<!-- <script src="API-Integration.js"></script> -->
 		<script src="../js/augmentedReality.js"></script>
+		<script src="../js/cardPositionGlow.js"></script>
+
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
