--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
                                         <tspan class="subText" x="50%" y="79px">I'm a designer, an artist,</tspan>
                                         <tspan class="subText" x="48%" y="86px">and a problem solver.</tspan>  
                                     </text>
-                                    <!-- <text x="50%" y="37px">Hi, I'm</text>
-                                    <text x="50%" y="3.79rem">John.</text>
-                                    <text class="subText" x="50%" y="4.79rem">I'm a designer, an artist,</text>
-                                    <text class="subText" x="50%" y="5.12rem">and a problem solver.</text> -->
                                 </clipPath>
                             </defs>
                             <rect x="0" y="0" width="100%" height="100%" fill="url(#Gradient1)"/>
@@ -95,7 +91,7 @@
            
             <div class="text-white contentUnit" id="firstContainer">
                 <div class="mediaTextBox row mx-0">
-                    <div class="mediaBox col-12 col-lg-8">
+                    <div class="mediaBox col-12 col-lg-7">
                         <div class="d-flex h-100 justify-content-around">
                             <div class="row justify-content-center flex-nowrap" id="">
 
@@ -108,20 +104,43 @@
                                 <h2 style="margin: 0;">ABOUT ME</h2>
                             </div>
                             <div class="my-5 words fadeRight">
-                                    <p>I have worked in the motion graphics and augmented reality industry for over five years. In that time, I have...</p>
+                                <p>Following my degree in 3D Visualization with a focus on Interactive Design, I started my career in the augmented reality industry.
+                                    Since then, I have continually refined my approach to clean and effective design. It requires strong attention to detail while maintaining a clear vision for the overall user experience.</p>
+                                <p>I thrive in environments which challenge me to come up with creative solutions. I seek opportunities to create engaging experiences with emerging technologies.
+                                    Few things are as rewarding to me as bringing an innovative concept to fruition.</p>
                             </div>
-                            
+                            <a href="work.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
+                                <span>RESUME</span> 
+                                <div class="icon baseline">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                        <title>round-arrow_forward_ios-48px</title>
+                                        <path d="M14.76,42.02a2.4987,2.4987,0,0,0,3.54,0L34.92,25.4a1.9917,1.9917,0,0,0,0-2.82L18.3,5.96A2.5032,2.5032,0,0,0,14.76,9.5L29.24,24,14.74,38.5A2.4928,2.4928,0,0,0,14.76,42.02Z"/>
+                                    </svg>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                        <div class="col-lg-4 d-none d-lg-block px-0">
+                        <div class="col-lg-5 d-none d-lg-block px-0">
                         <div class="h-100">
                             <div class="animElement fadeUp textBox overflow-hidden">
                                 <div class="animElement fadeRight d-inline-flex rounded-pill subHead">
                                     <h2 class="my-auto" style="margin: 0;">ABOUT ME</h2>
                                 </div>
                                 <div class="my-5 words fadeRight">
-                                        <p>I have worked in the motion graphics and augmented reality industry for over five years. In that time, I have...</p>
+                                    <p>Following my degree in 3D Visualization with a focus on Interactive Design, I started my career in the augmented reality industry.
+                                            Since then, I have continually refined my approach to clean and effective design. It requires strong attention to detail while maintaining a clear vision for the overall user experience.</p>
+                                    <p>I thrive in environments which challenge me to come up with creative solutions. I seek opportunities to create engaging experiences with emerging technologies.
+                                        Few things are as rewarding to me as bringing an innovative concept to fruition.</p>
                                 </div>
+                                <a href="work.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
+                                    <span>RESUME</span> 
+                                    <div class="icon baseline">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                            <title>round-arrow_forward_ios-48px</title>
+                                            <path d="M14.76,42.02a2.4987,2.4987,0,0,0,3.54,0L34.92,25.4a1.9917,1.9917,0,0,0,0-2.82L18.3,5.96A2.5032,2.5032,0,0,0,14.76,9.5L29.24,24,14.74,38.5A2.4928,2.4928,0,0,0,14.76,42.02Z"/>
+                                        </svg>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -132,7 +151,7 @@
                 <div class="mediaTextBox row mx-0">
                     <div class="mediaBox col-md-12 col-lg-7 order-2">
                         <div class="d-flex h-100 justify-content-around">
-                            <div class="row justify-content-center flex-nowrap" id="brandsSVG">
+                            <div class="row justify-content-center flex-nowrap my-auto" id="brandsSVG">
                                 <!-- <div class="animatedSprite"></div> -->
                                 <!-- <svg id="brandsSVG" viewBox= "0 0 100 50" href=""></svg> -->
                                 <img src="images/main/brands-01.svg#svgView(viewBox(0,0,12px,5.45px))" alt="">
@@ -146,11 +165,16 @@
                                 <h2 style="margin: 0;">WORK</h2>
                             </div>
                             <div class="mt-5 mb-3 words fadeRight">
-                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands.</p>
+                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands. Click here to get an in-depth look at some of those projects.</p>
                             </div>
-                            <a href="work.html" class="btn custom-btn stretched-link text-justify-center mt-3 mb-5 float-right">
-                                SEE MY WORK 
-                                <i class="material-icons-round ml-1">arrow_forward_ios</i>
+                            <a href="work.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
+                                <span>SEE MY WORK</span>
+                                <div class="icon baseline">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                            <title>round-arrow_forward_ios-48px</title>
+                                            <path d="M14.76,42.02a2.4987,2.4987,0,0,0,3.54,0L34.92,25.4a1.9917,1.9917,0,0,0,0-2.82L18.3,5.96A2.5032,2.5032,0,0,0,14.76,9.5L29.24,24,14.74,38.5A2.4928,2.4928,0,0,0,14.76,42.02Z"/>
+                                        </svg>
+                                    </div>
                             </a>
                         </div>
                     </div>
@@ -160,11 +184,16 @@
                                 <h2 class="my-auto">WORK</h2>
                             </div>
                             <div class="mt-5 mb-3 words fadeRight">
-                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands.</p>
+                                <p>Five years in the augmented reality and motion graphics industry have afforded me the privilege of producing content for several global brands. Click here to get an in-depth look at some of those projects.</p>
                             </div>
-                            <a href="work.html" class="btn custom-btn stretched-link text-justify-center mt-3 mb-5 float-right">
-                                SEE MY WORK 
-                                <i class="material-icons-round ml-1 my-auto">arrow_forward_ios</i>
+                            <a href="work.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
+                                <span>SEE MY WORK</span> 
+                                <div class="icon baseline">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                        <title>round-arrow_forward_ios-48px</title>
+                                        <path d="M14.76,42.02a2.4987,2.4987,0,0,0,3.54,0L34.92,25.4a1.9917,1.9917,0,0,0,0-2.82L18.3,5.96A2.5032,2.5032,0,0,0,14.76,9.5L29.24,24,14.74,38.5A2.4928,2.4928,0,0,0,14.76,42.02Z"/>
+                                    </svg>
+                                </div>
                             </a>
                         </div>
                     </div>
