--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="work.html" class="nav-link">WORK</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">CV</a>
+                        <a href="resume.html" class="nav-link">CV</a>
                     </li>
                 </ul>
             </div>
@@ -200,43 +200,7 @@
                 </div>
             </div>
 
-            <div class="text-white contentUnit" id="thirdContainer">
-                <div class="mediaTextBox row mx-0">
-                    <div class="mediaBox col-12 col-lg-7 pl-lg-5">
-                        <div class="d-flex h-100">
-                                <div class="video embed-responsive embed-responsive-16by9">
-                                        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/345636912?color=ffffff&portrait=0" allowfullscreen>
-                                        </iframe>
-                                    </div>
-                        </div>
-                    </div>
-                    <div class="col-12 d-block d-lg-none px-0">
-                        <div class="animElement fadeUp textBox h-100 overflow-hidden">
-                            <div class="animElement fadeRight subHead d-inline-flex rounded-pill">
-                                <h2 style="margin: 0;">COMING SOON</h2>
-                            </div>
-                            <div class="my-5 words fadeRight">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum velit et purus malesuada viverra.
-                                    Sed tempus sem sed arcu tempor, ac porta arcu pellentesque. Ut nec elit facilisis, iaculis erat nec, maximus erat.
-                                    In congue tempus est eget tincidunt. Nulla facilisi. In rhoncus justo volutpat lorem scelerisque volutpat. Sed.</p>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-5 d-none d-lg-block px-0">
-                        <div class="animElement fadeUp textBox overflow-hidden">
-                            <div class="animElement fadeRight subHead d-inline-flex rounded-pill">
-                                <h2 class="my-auto" style="margin: 0;">COMING SOON</h2>
-                            </div>
-                            <div class="my-5 words fadeRight">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum velit et purus malesuada viverra.
-                                    Sed tempus sem sed arcu tempor, ac porta arcu pellentesque. Ut nec elit facilisis, iaculis erat nec, maximus erat.
-                                    In congue tempus est eget tincidunt. Nulla facilisi. In rhoncus justo volutpat lorem scelerisque volutpat. Sed.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </div>
 
 
@@ -248,7 +212,7 @@
         <!-- <script src="js/scalingTopImage.js"></script> -->
         <!-- <script src="../js/stickyFade.js"></script> -->
         <script src="js/animatedSprite.js"></script>
-        <script src="js/gradientBackground-main2.js"></script>
+        <script src="js/gradientBackground-main3.js"></script>
         <script src="js/svgTextAlign.js"></script>
         <script src="js/navbar.js"></script>
 
