--- a/AR/maroon-5.html
+++ b/AR/maroon-5.html
@@ -23,6 +23,27 @@
 
 	<body>
         <!-- NAVBAR -->
+        <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md" >
+                <a href="../index.html" class="navbar-brand">
+                    <img src="../images/glassBustColorG1_favicon32.png" width="32px" height="32px" alt="">
+                </a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navLinks">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="../index.html" class="nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="../work.html" class="nav-link">WORK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="../resume.html" class="nav-link">CV</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         
         <!-- FIRST PAGE DIV -->
 
@@ -157,6 +178,7 @@
         <script src="../js/scalingTopImage.js"></script>
         <script src="../js/stickyFade.js"></script>
         <script src="../js/animatedSprite.js"></script>
+        <script src="../js/gradientBackground-maroon5.js"></script>
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
