--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <p>I thrive in environments which challenge me to come up with creative solutions. I seek opportunities to create engaging experiences with emerging technologies.
                                     Few things are as rewarding to me as bringing an innovative concept to fruition.</p>
                             </div>
-                            <a href="work.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
+                            <a href="resume.html" class="btn custom-btn stretched-link mt-3 mb-5 float-right">
                                 <span>RESUME</span> 
                                 <div class="icon baseline">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
