--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,8 @@
 
         <!-- container for content -->
         <div class="container my-5 p-5 " style="min-height: 500px;">
-            <div class="row  no-gutters" style="min-height: 500px;">
-                <div class="col-12 justify-content-center pb-4">
+            <div class="row" style="min-height: 500px;">
+                <div class="col-12 justify-content-center p-3">
                     <div class="knockoutTextContainer svgGradient item1">
                         <div class="whiteBox">
                             <svg class="knockoutTextBox" viewBox= "0 0 800 100">
@@ -71,7 +71,7 @@
                             </svg>
                         </div>
                     </div>
-                </div>   
+                </div class="p-3">   
                     <div class='embed-responsive' style='padding-bottom:140%'>
                         <object data='images/John-Moody-Resume-2019.pdf' type='application/pdf' width='100%' height='100%'></object>
                     </div>
