--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@
                                             <h2 style="margin: 0;"></h2>
                                         </div> -->
                                         <!-- <h5 class="card-title">Cereal Box Superheroes</h5> -->
-                                        <p class="card-text"  style="height: 5rem;">General Mills worked with DC-Comics to create Justice League themed cereal boxes. Then, they wanted to bring it to life.</p>
+                                        <p class="card-text"  style="min-height: 5rem;">General Mills worked with DC-Comics to create Justice League themed cereal boxes. Then, they wanted to bring it to life.</p>
                                         <!-- <a href="AR/cereal.html" class="btn btn-primary stretched-link">Go somewhere</a> -->
                                         <a href="AR/cereal.html" class="btn custom-btn stretched-link mt-3 mb-1 float-right">
                                             <span>VIEW PROJECT</span> 
