--- a/work.html
+++ b/work.html
@@ -148,7 +148,7 @@
                                     <img src="images/ar-images/maroon5Gradient2.jpg" id="imagePlacement02" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <!-- <h5 class="card-title">Card title</h5> -->
-                                        <p class="card-text"  style="height: 5rem;">To enhance the release of their album, <i>Red Pill Blues</i>, Maroon 5 wanted to give fans an exclusive way to unlock extra content.</p>
+                                        <p class="card-text"  style="min-height: 5rem;">To enhance the release of their album, <i>Red Pill Blues</i>, Maroon 5 wanted to give fans an exclusive way to unlock extra content.</p>
                                         <!-- <a href="AR/maroon-5.html" class="btn btn-primary stretched-link">Go somewhere</a> -->
                                         <a href="AR/maroon-5.html" class="btn custom-btn stretched-link mt-3 mb-1 float-right">
                                             <span>VIEW PROJECT</span> 
@@ -168,7 +168,7 @@
                                     <img src="images/ar-images/BroncosGradient2.jpg" id="imagePlacement02" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <!-- <h5 class="card-title">Card title</h5> -->
-                                        <p class="card-text"  style="height: 5rem;">The Denver Broncos wanted their fans to take home a piece of the excitement.</p>
+                                        <p class="card-text"  style="min-height: 5rem;">The Denver Broncos wanted their fans to take home a piece of the excitement.</p>
                                         <!-- <a href="AR/broncos.html" class="btn btn-primary stretched-link">Go somewhere</a> -->
                                         <a href="AR/broncos.html" class="btn custom-btn stretched-link mt-3 mb-1 float-right">
                                             <span>VIEW PROJECT</span> 
